--- a/currencyConverter.html
+++ b/currencyConverter.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Currency Converter - Convert your currency</title>
-  <link rel="stylesheet" href="currencyConverter.css" />
-  <script defer src="currencyConverter.js"></script>
+  <link rel="stylesheet" href="./currencyConverter.css" />
+  <script defer src="./currencyConverter.js"></script>
 </head>
 <body>
   <nav>
